[CXF-1625] Allow decoupled responses from servlet transport by promoting the getConduitInitiator method to the super class.
git-svn-id: https://svn.apache.org/repos/asf/cxf/trunk@662492 13f79535-47bb-0310-9956-ffa450edef68